# liftlog-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ]  dd.sh  main.js  openapi.yaml  package-lock.json  package.json
.github/workflows/: github-actions.yml
controller/: users.js  workout.js  workout_history.js
middleware/: authentication.js  cors_allow_all.js
routes/: users.js  workout_history.js  workouts.js
src/: main.rs
src/router/: router.rs
