[package]
name = "liftlog-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.130"
mongodb = "2.0.1"
jsonwebtoken = "7.2.0"
serde_json = "1.0.59"
